Updates, with optimizations on previous methods